# powerlifting-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile.frontend  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: rulebook.txt
src/: __init__.py  agent_setup.py  api.py  frontend.py  logger.py  main.py  rules_search.py
