[tool.poetry]
name = "powerlifting-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
swarm = {git = "https://github.com/openai/swarm.git"}
python-dotenv = "^1.0.0"
rank-bm25 = "^0.2.2"
scikit-learn = "^1.6.0"
qdrant-client = "^1.7.0"
numpy = "^1.24.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
streamlit = "^1.29.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.9"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
